--- a/FullApp_v1/V2_App/test.ipynb
+++ b/FullApp_v1/V2_App/test.ipynb
@@ -20,33 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates = x['Date'].values.tolist()\n",
-    "dates = dates[:10]"
+    "closed = x['Close'].values.tolist()\n",
+    "high = x['High'].values.tolist()\n",
+    "low = x['Low'].values.tolist()\n",
+    "volume = x['Volume'].values.tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['2012-03-12', '2012-03-13', '2012-03-14', '2012-03-15', '2012-03-16']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.725 4.797 4.622 77808.0\n"
+     ]
     }
    ],
    "source": [
-    "closed = x['Close'].values.tolist()\n",
-    "closed = closed[:10]"
+    "print(closed[-1],\n",
+    "high[-1],\n",
+    "low[-1],\n",
+    "volume[-1])"
    ]
   },
   {
